maven-compiler-plugin TODO